test/should_fail/DuplicateClass2.oj
@class DuplicateClass

@implementation DuplicateClass
@end

@implementation DuplicateClass
@end
